kube_manifests/svc-blue.yaml
apiVersion: v1
kind: Service
metadata:
  name: blue-app
  namespace: default
spec:
  selector:
    app: blue-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
