kube_manifests/svc-green.yaml
apiVersion: v1
kind: Service
metadata:
  name: green-app
  namespace: default
spec:
  selector:
    app: green-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8081
