kube_manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: primary-ingress
  annotations:
    kubernetes.io/elb.port: '80'
spec:
  rules:
  - host: blue-green.com
    http:
      paths:
      - path: /
        backend:
          service:
            name: blue-app
            port:
              number: 80
        pathType: ImplementationSpecific
  ingressClassName: nginx

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: canary-ingress
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "25"
    kubernetes.io/elb.port: '80'
spec:
  rules:
  - host: blue-green.com
    http:
      paths:
      - path: /
        backend:
          service:
            name: green-app
            port:
              number: 80
        pathType: ImplementationSpecific
  ingressClassName: nginx
